# src/main/java/io/strimzi/kafka/bridge/http/HttpOpenApiOperations.java
@@ -28,7 +28,7 @@ public enum HttpOpenApiOperations {
     HEALTHY("healthy"),
     READY("ready"),
     OPENAPI("openapi"),
-    CONFIGURATION("configuration");
+    INFO("info");
 
     private final String text;
 
